<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedSearch">

    <EditText
        android:id="@+id/searchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/search_margin"
        android:hint="@string/titleHint"
        />

    <EditText
        android:id="@+id/searchAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/search_margin"
        android:hint="@string/authorHint"
        />

    <EditText
        android:id="@+id/searchPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/search_margin"
        android:hint="@string/publisherHint"
        />

    <EditText
        android:id="@+id/searchNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/search_margin"
        android:hint="@string/numberHint"
        />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_margin="@dimen/search_margin"
        />
</LinearLayout>